syntax = "proto3";

package test.common.router;

import "envoy/api/v2/core/base.proto";
import "test/fuzz/common.proto";

// Structured input for header_parser_fuzz_test.

message TestCase {
  repeated envoy.api.v2.core.HeaderValueOption headers_to_add = 1;
  repeated string headers_to_remove = 2;
  test.fuzz.RequestInfo request_info = 3;
}
